// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectOption component matches the existing snapshot 1`] = `
<div>
  <article>
    <a
      aria-label="mock link aria-label"
      class="link"
      href="https://placecage.com"
      rel="noreferrer"
      target="_blank"
    >
      <img
        alt="mock alt"
        class="img"
        src="https://placekitten.com"
      />
      mock link text
    </a>
  </article>
</div>
`;

exports[`ConnectOption component matches the existing snapshot WITH download attribute 1`] = `
<div>
  <article>
    <a
      aria-label="mock link aria-label"
      class="link"
      download=""
      href="https://placecage.com"
      rel="noreferrer"
      target="_blank"
    >
      <img
        alt="mock alt"
        class="img"
        src="https://placekitten.com"
      />
      mock link text
    </a>
  </article>
</div>
`;
